# grid-desk

./: .env.example  .gitignore  .gitleaks.toml  LICENSE  README.md  SECURITY.md  compose.yaml  railway.json
apps/web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/health/: route.ts
apps/web/app/api/readings/: route.ts
apps/web/app/api/ready/: route.ts
apps/web/app/api/weather/: route.ts
apps/web/components/: ElectricityDashboard.module.css  ElectricityDashboard.tsx
apps/web/lib/: data.ts  db.ts  types.ts  weather.test.mjs  weather.ts
scripts/: submit-mfa.sh
services/collector/: .dockerignore  Dockerfile  pyproject.toml  railway.json  requirements.txt
services/collector/coned_collector/: __init__.py  coned.py  config.py  database.py  main.py  schema.sql
services/collector/tests/: test_coned.py  test_config.py  test_main.py
